Show Featured plans when logged out, or when no subscriptions present.

--- a/app/views/sidebars/references/_show.html.haml
+++ b/app/views/sidebars/references/_show.html.haml
@@ -4,10 +4,8 @@
   
   reference = presenter.reference
 
-
 = render partial: 'widgets/find_friends'
-= render partial: 'widgets/my_plans' #if logged_in?
-= render partial: 'widgets/featured_plans' #unless logged_in?
+= render partial: 'widgets/my_plans' if logged_in?
+= render partial: 'widgets/featured_plans' if logged_out?
 = render partial: 'sidebars/notes/stub', locals: {reference: reference}
-
 = render partial: 'widgets/download_app'
