Next round of VOTD integration into moments feed.

--- a/app/assets/stylesheets/_social.sass
+++ b/app/assets/stylesheets/_social.sass
@@ -507,6 +507,8 @@ body.transition .moment
   padding: 15px
   clear: both
   margin-bottom: 0
+  max-height: 125px
+  overflow: hidden
 
 .moment-vod-list
   overflow: hidden
