--- a/app/views/shared/_js_templates.html.haml
+++ b/app/views/shared/_js_templates.html.haml
@@ -133,13 +133,9 @@
               <span class="share_logo">
                 <span class="share_logo_fb">&nbsp;</span>
               </span>
-              <span class="share_checkbox">
-                <span class="share_button">
-                  <input id="checkbox_share_facebook" type="checkbox" name="share[connections][facebook]" />
-                  <span class="share_verse_facebook">
-                    #{t("Facebook")}
-                  </span>
-                </span>
+              <span class="share_slider">
+                <input id="checkbox_share_facebook" type="checkbox" name="share[connections][facebook]" />
+                <span class="slider facebook">&nbsp;</span>
               </span>
               <span class="share_character_count">
                 <span class="fb"></span>
@@ -153,13 +149,9 @@
               <span class="share_logo">
                 <span class="share_logo_twitter">&nbsp;</span>
               </span>
-              <span class="share_checkbox">
-                <span class="share_button">
-                  <input id="checkbox_share_twitter" type="checkbox" name="share[connections][twitter]" />
-                  <span class="share_verse_twitter">
-                    #{t("twitter")}
-                  </span>
-                </span>
+              <span class="share_slider">
+                <input id="checkbox_share_twitter" type="checkbox" name="share[connections][twitter]" />
+                <span class="slider twitter">&nbsp;</span>
               </span>
               <span class="share_character_count">
                 <span class="tw"></span>
