Changed book/chapter modal to white

--- a/app/assets/stylesheets/mobile/_dynamic_menus.sass
+++ b/app/assets/stylesheets/mobile/_dynamic_menus.sass
@@ -1,6 +1,5 @@
 #menu_book_chapter
-  background-image: none
-  background: #202020
+  background: #fff
   border: 0px
   width: 100%
   padding: 0px
