--- a/app/views/shared/_js_templates.html.haml
+++ b/app/views/shared/_js_templates.html.haml
@@ -212,7 +212,7 @@
 %script#moment-votd-verse-tmpl{type:"text/x-handlebars-template"}
   :plain
     <div class="moment-votd-verse-wrap">
-      <p class="moment-votd-verse">{{content_plain}}</p>
+      <p class="moment-votd-verse" data-reference-human="{{human}}" data-reference-path="{{to_path}}">{{content_plain}}</p>
     </div>
     <a href="{{to_path}}" class="moment-vod-links">{{human}}</a>
 
@@ -317,8 +317,8 @@
       &nbsp;
     %div
       %span
-        %a{href:"#", title: "Share this on Facebook", class: "moment-actions-share-facebook"}
+        %a{href:"#", target: "_blank", title: "Share this on Facebook", class: "facebook moment-actions-share-facebook"}
           Facebook
       %span    
-        %a{href:"#", title: "Share this on Twitter", class: "moment-actions-share-twitter"}
+        %a{href:"#", target: "_blank", title: "Share this on Twitter", class: "twitter moment-actions-share-twitter"}
           Twitter
