Fixed share now button

--- a/app/views/shared/_js_templates.html.haml
+++ b/app/views/shared/_js_templates.html.haml
@@ -330,3 +330,4 @@
           Facebook
       %span    
         %a{href:"#", target: "_blank", title: "Share this on Twitter", class: "twitter moment-actions-share-twitter"}
+          Twitter
