--- a/app/assets/stylesheets/_social.sass
+++ b/app/assets/stylesheets/_social.sass
@@ -509,6 +509,34 @@ body.transition .moment
   margin-bottom: 0
   max-height: 125px
   overflow: hidden
+  position: relative
+
+  .content-action
+    position: absolute
+    bottom: 0
+    left: 0
+    height: 24px
+    line-height: 24px
+    background-color: #f5f4f3
+    display: none
+    width: 100%
+    padding: 0 15px
+
+    a
+      font-weight: normal
+      font-size: 16px
+
+  .content-action .less
+    display: none
+
+  .content-action.expanded .more
+    display: none 
+
+  .content-action.expanded .less
+    display: block
+
+.moment-votd-verse.expanded
+  padding-bottom: 30px
 
 .moment-vod-list
   overflow: hidden
