--- a/app/views/shared/_js_templates.html.haml
+++ b/app/views/shared/_js_templates.html.haml
@@ -213,7 +213,7 @@
   :plain
     <div class="moment-votd-verse-wrap">
       <p class="moment-votd-verse" data-reference-human="{{human}}" data-reference-path="{{to_path}}">{{content_plain}}
-      <span class="content-action"><a href="#" class="more" title="Show More">Show More</a><a href="#" class="less" title="Show Less">Show Less</a></span>
+      <span class="content-action"><a href="#" class="more" title="Show More">Read all</a><a href="#" class="less" title="Show Less">Read less</a></span>
       </p>
     </div>
     <a href="{{to_path}}" class="moment-vod-links">{{human}}</a>
