--- a/app/assets/stylesheets/_widgets.sass
+++ b/app/assets/stylesheets/_widgets.sass
@@ -229,6 +229,9 @@
   margin: 0
   padding-top: 10px
 
+.widget td p.small
+  padding-top: 0
+
 .widget tbody tr:first-child td
   border-top: 0
 
@@ -582,7 +585,7 @@ html.mobile-client
 
     li
       padding: 15px
-      border-top: 1px solid #cdcdcd
+      border-top: 1px solid #eee
       border-bottom: none
 
       h3
