--- a/app/views/sidebars/notes/_list.html.haml
+++ b/app/views/sidebars/notes/_list.html.haml
@@ -8,30 +8,31 @@
   # link   (optional)
   # title  (optional)
   
-   title = title || "Notes"
+   title = t("notes.community notes")
    link = link || notes_path
 
 #widget-notes.widget
   %div.hd
     %span
-      = @title
-    %a.count{href: @link}
-      = @notes.total || 0
+      = title
 
-  - unless @notes.empty?
+  - unless notes.empty?
     %table
       %tbody
-      - @notes.first(8).each do |note|
+      - notes.first(8).each do |note|
         %tr
           %th
             %a
-              %img.avatar_small{src: note.user_avatar_url.px_24x24}
+              - user = note.user
+              - md_avatar = user.avatars.md_avatar
+              %img.avatar_small{src: md_avatar.url}
+              
           %td
             %a= link_to note.title, note_path(note.id)
-            %p.mute.small= note.username
+            %p.mute.small= user.name
 
-    %div.ft.align_right
-      %a.more_arrow{href: @link}= t('show all notes', total: @notes.total)
+    %div.ft
+      %a{href: link}= t('show all notes', total: notes.size)
 
   - else
     %div.bd
