--- a/app/assets/stylesheets/_notifications.sass
+++ b/app/assets/stylesheets/_notifications.sass
@@ -96,16 +96,16 @@ article.social-requests ul
   float: left
   width: 40px
   height: 40px
-  margin: 5px 0px 5px 25px
+  margin: 5px 0px 5px 23px
   text-indent: 100%
   overflow: hidden
-  wihte-space: nowrap
+  position: relative
 
 #header .friend-requests-btn
   background-position: 0px 9px
 
 #header .notifications-btn
-  background-position: 0px -55px
+  background-position: 0px -50px
   margin-left: 10px
 
 #header
@@ -121,7 +121,7 @@ article.social-requests ul
   .header-popover
     position: absolute
     top: 48px
-    left: 40px
+    left: -131px
     width: 350px
     border: 1px solid #d4d4d4
     +border-radius(5px)
@@ -241,7 +241,7 @@ article.social-requests ul
 
 
   .header-popover.notifications
-    left: 80px
+    left: -91px
 
     .arrow
       left: 169px
