--- a/app/assets/stylesheets/mobile/_notifications.sass
+++ b/app/assets/stylesheets/mobile/_notifications.sass
@@ -1,3 +1,6 @@
+#header .user_options
+  position: static
+
 #header .friend-requests-btn,
 #header .notifications-btn
   background: image-url("header-sprite.png") no-repeat
@@ -26,7 +29,7 @@
   top: 0
 
 #header .notifications-btn
-  background-position: 0px -55px
+  background-position: 0px -50px
   margin-left: 0px
   margin-top: 3px
   left: 95px
