--- a/app/assets/stylesheets/mobile/_header.sass
+++ b/app/assets/stylesheets/mobile/_header.sass
@@ -6,6 +6,7 @@
   border-radius: 0px !important
   padding: 0px !important
   width: 100%
+  border: 1px solid #232324
 
 #header_outer
   padding: 0
@@ -217,6 +218,9 @@
   background: none
   margin: 0 10px 0 0
 
+#header ul.nav_user,
+#header nav.no_auth
+  display: none
 
 // `Header > Search
 //----------------------------------------------------------------------------------------------------
