--- a/app/views/shared/header/_default.html.haml
+++ b/app/views/shared/header/_default.html.haml
@@ -4,28 +4,45 @@
 #header_outer
 
   %header#header{role:"banner"}
-
     %a#logo{href: "/", style: "#{@site.logo_style}; background-image: url(#{asset_path(@site.logo_image)})"}
       = @site.title
+
+    %form#header_search_form{action: search_path(category: params[:category] || :bible), method: "GET"}
+      %input#header_search_input{type: 'search', name:"q", placeholder: t("search placeholder")}
+      %input#header_search_button{type: 'submit', value: t("search")}
+      - if params[:controller] == "search"
+        -if params[:version]
+          %input{type: 'hidden', name: "version", value: params[:version]}
     
-    - if current_auth
-      %a.friend-requests-btn.popover-link{href: "#", class: is_home_url ? 'home-url' : ''}
-        =t("friendships.requests title")
-      = render partial: "shared/header/requests"
-
-      %a.notifications-btn.popover-link{href: "#", class: is_home_url ? 'home-url' : ''}
-        =t("notifications.title")
-      = render partial: "shared/header/notifications"
-
-    -# Sign in and user id
-    %nav.sign_in
+    .header-user
+      -# Sign in and user id
       - if current_auth
-        %ul
+        %nav.sign_in
+          %span
+            %img{src: current_user.user_avatar_url["px_24x24"]}
+            %span.user_name=current_auth.username
+
+        .user_options
+          %a.friend-requests-btn.popover-link{href: "#", class: is_home_url ? 'home-url' : ''}
+            =t("friendships.requests title")
+          = render partial: "shared/header/requests"
+
+          %a.notifications-btn.popover-link{href: "#", class: is_home_url ? 'home-url' : ''}
+            =t("notifications.title")
+          = render partial: "shared/header/notifications"
+
+        %ul.nav_user
+          %li.highlights
+            %a{href: highlights_user_path(current_auth.username)}  
+          %li.bookmarks
+            %a{href: bookmarks_user_path(current_auth.username)}     
+          %li.notes
+            %a{href: notes_user_path(current_auth.username)}
           %li.auth
             %a#header_profile_trigger{:href => '#'}
-              %span
-                %img{src: current_user.user_avatar_url["px_24x24"]}
-                =current_auth.username
+              // text needs localized
+              More
+
             #header_profile_menu
               %span.arrow
               %ol
@@ -34,16 +51,7 @@
                     =t("users.profile.tab activity")
                 %li
                   %a{href: user_friends_path(user_id: current_auth.username)}
-                    =t("users.profile.tab friends")
-                %li
-                  %a{href: notes_user_path(current_auth.username)}
-                    =t("users.profile.tab notes")
-                %li
-                  %a{href: bookmarks_user_path(current_auth.username)}
-                    =t("users.profile.tab bookmarks") 
-                %li
-                  %a{href: highlights_user_path(current_auth.username)}
-                    =t("users.profile.tab highlights")   
+                    =t("users.profile.tab friends") 
                 %li
                   %a{href: badges_user_path(current_auth.username)}
                     =t("users.profile.tab badges")
@@ -52,14 +60,16 @@
                     =t("settings") 
                 %li
                   %a{href: sign_out_path}
-                    =t("sign out")  
+                    =t("sign out")                
 
       - else
-        %ul
-          %li
-            = link_to t("sign in"), sign_in_path(redirect: params[:redirect]), class: "sign_in"
-          %li
-            = link_to t("sign up"), sign_up_path(redirect: params[:redirect]), class: "sign_in"
+        %nav.no_auth
+          %ul
+            %li
+              = link_to t("sign in"), sign_in_path(redirect: params[:redirect]), class: "sign_in"
+            %li
+              = link_to t("sign up"), sign_up_path(redirect: params[:redirect]), class: "sign_in"
+
 
     .mobile
       - if content_for? :mobile_left_nav
@@ -78,9 +88,4 @@
           - else
             = yield :mobile_right_nav
 
-    %form#header_search_form{action: search_path(category: params[:category] || :bible), method: "GET"}
-      %input#header_search_input{type: 'search', name:"q", placeholder: t("search placeholder")}
-      %input#header_search_button{type: 'submit', value: t("search")}
-      - if params[:controller] == "search"
-        -if params[:version]
-          %input{type: 'hidden', name: "version", value: params[:version]}
+
