adjust text style and padding for votd ‘read all’ text

--- a/app/assets/stylesheets/_social.sass
+++ b/app/assets/stylesheets/_social.sass
@@ -431,7 +431,7 @@ body.transition .moment
 
 
 // To match App styling of verse links on Home feed embedded in cards
-
+.moment-votd-verse .content-action a,
 .moment-verse-link
   color: #999
   font-size: 12px
@@ -520,11 +520,6 @@ body.transition .moment
     background-color: #f5f4f3
     display: none
     width: 100%
-    padding: 0 15px
-
-    a
-      font-weight: normal
-      font-size: 16px
 
   .content-action .less
     display: none
@@ -536,7 +531,7 @@ body.transition .moment
     display: block
 
 .moment-votd-verse.expanded
-  padding-bottom: 30px
+  padding-bottom: 45px
 
 .moment-vod-list
   overflow: hidden
