Find friends widget on requests page.

--- a/app/assets/stylesheets/_social.sass
+++ b/app/assets/stylesheets/_social.sass
@@ -17,6 +17,9 @@
   padding-left: 5px
   position: relative
 
+#main article.social-requests
+  padding-left: 0  
+
 #main article.social-feed,
 #main div.social-feed
   width: 905px
