--- a/app/assets/stylesheets/_dynamic_menus.sass
+++ b/app/assets/stylesheets/_dynamic_menus.sass
@@ -142,6 +142,9 @@
   @media only screen and (max-width: 768px)
     table-layout: fixed  
 
+  @media only screen and (max-width: 768px)
+    table-layout: fixed
+
 .dynamic_menu th
   text-align: right
   white-space: nowrap
@@ -421,6 +424,7 @@
   background-position: -557px 10px
   position: relative
   +opacity(1)
+  height: 43px
 
 #menu_verse_actions dt.related.disabled
   background-position-y: 10px !important
