--- a/app/assets/stylesheets/mobile/_dynamic_menus.sass
+++ b/app/assets/stylesheets/mobile/_dynamic_menus.sass
@@ -43,16 +43,22 @@
   text-overflow: ellipsis
   width: 40%
 
+.version_select td div
+  width: 70%
+  padding-right: 20px
+
 .version_select tr
-  width 100%
+  width: 100%
 
 .version_select th
-  min-width: 6em
+  float: left
+  width: 33%
 
   a
     padding: 10px
 .version_select td
-  width: 80%
+  float: left
+  width: 67%
 
   a
     display: block
