Color picking now on Bookmark and Note edit forms.

--- a/app/assets/stylesheets/mobile/_dynamic_menus.sass
+++ b/app/assets/stylesheets/mobile/_dynamic_menus.sass
@@ -99,9 +99,7 @@
   display: none
 
 #menu_book_chapter .scroll::-webkit-scrollbar,
-.version_select .scroll::-webkit-scrollbar,
-.full_page_form .color,
-.full_page_form .color_picker_list
+.version_select .scroll::-webkit-scrollbar
   display: none
 
 .dynamic_menu.version_select th a
