--- a/app/views/moments/_bookmark.html.haml
+++ b/app/views/moments/_bookmark.html.haml
@@ -8,7 +8,7 @@
   avatars = moment.avatars
   avatar = avatars.lg_avatar
 
-.moment{"data-moment-id" => moment.id}
+.moment{"data-moment-id" => moment.id, "data-moment-path" => moment.to_path, "data-str-delete-confirm" => "Are you sure you want to delete this?"}
   -# !the content of the moment
   .moment-top
     .moment-bm
