--- a/app/assets/stylesheets/_social.sass
+++ b/app/assets/stylesheets/_social.sass
@@ -62,7 +62,7 @@ body.transition .moment
   float: right
 
 .moment-content-actions-edit,
-.moment-content-actions-delete
+.moment-action-delete
   padding: 0 0 1px 20px
   font-size: 13px
   color: #888
@@ -71,13 +71,13 @@ body.transition .moment
   background: image-url("edit-delete-sprite.png") no-repeat 1px 0
   margin: 0 15px 0 0
 
-.moment-content-actions-delete
+.moment-action-delete
   background: image-url("edit-delete-sprite.png") no-repeat 0px -69px
 
 .moment-content-actions-edit:hover
   background-position: 1px -35px
 
-.moment-content-actions-delete:hover
+.moment-action-delete:hover
   background-position: 0px -104px
 
 
@@ -903,7 +903,7 @@ body.transition .moment
     .moment-content-actions-edit
       +border-radius(5px 0 0 5px)
 
-    .moment-content-actions-delete
+    .moment-action-delete
       +border-radius(0 5px 5px 0)
 
 
