--- a/app/views/moments/_actions_bar.html.haml
+++ b/app/views/moments/_actions_bar.html.haml
@@ -21,4 +21,5 @@
       - if moment.editable?
         = link_to( t("moments.action.edit"), "#{moment.to_path}/edit", class: "moment-content-actions-edit", title: t("moments.action.edit #{moment.kind} title" ) )
       - if moment.deletable?
-        = link_to( t("moments.action.delete"), moment.to_path, method: :delete, confirm: t("moments.action.delete confirm"), class: "moment-content-actions-delete", title: t("moments.action.delete #{moment.kind} title"))
+        -# link_to( t("moments.action.delete"), moment.to_path, method: :delete, confirm: t("moments.action.delete confirm"), class: "moment-action-delete", title: t("moments.action.delete #{moment.kind} title"))
+        = link_to( t("moments.action.delete"),"#",class: "moment-action-delete", title: t("moments.action.delete #{moment.kind} title"))
