Community notes sidebar updates when new verse is selected/deselected.

--- a/app/views/sidebars/notes/_list.html.haml
+++ b/app/views/sidebars/notes/_list.html.haml
@@ -32,7 +32,7 @@
             %p.mute.small= user.name
 
     %div.ft
-      %a{href: link}= t('show all notes', total: notes.size)
+      %a{href: link}= t('show all notes')
 
   - else
     %div.bd
